Add new method to exchange rate interface and implementation
Adds the ability to fetch all rates from the exchange rate service.
Also modifies the API call to fetch all rates when the URL parameter is
omitted.

Updates API documentation as well.
