# docs/api.yaml
@@ -1103,7 +1103,7 @@ paths:
       tags:
         - Misc
       summary: Get exchange rates
-      description: Returns the exchange rate (per BTC) for the given fiat currency
+      description: Returns either the exchange rate (per BTC) for the given fiat currency or all rates.
       operationId: Get
       consumes:
         - application/json
@@ -1112,14 +1112,18 @@ paths:
       parameters:
         - name: currencyCode
           in: path
-          description: The fiat currency code
-          required: true
+          description: The fiat currency code. This field may be omitted if you want to receive all exchange rates.
           type: string
+          required: true
       responses:
         '200':
           description: OK
           schema:
             $ref: '#/definitions/ExchangeRate'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ErrorResponse'
   /ob/listing:
     post:
       tags:
@@ -1303,6 +1307,76 @@ paths:
           required: true
           schema:
             $ref: '#/definitions/OrderConfirmation'
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/DefaultResponse'
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '404':
+          description: Not Found
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+  /ob/orderfulfillment:
+    post:
+      tags:
+        - Orders
+      summary: Fulfill an order
+      description: Send an order fulfillment message to the buyer. Typically used to tell the buyer an item has been shipped.
+      operationId: PostOrderFulfillment
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Order fulfillment object
+          required: true
+          schema:
+            $ref: '#/definitions/OrderFulfillment'
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/DefaultResponse'
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '404':
+          description: Not Found
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '500':
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+  /ob/ordercompletion:
+    post:
+      tags:
+        - Orders
+      summary: Complete an order
+      description: Send the order complete message (including the rating) to the vendor. If this is a moderated order, it will sign and release the funds to the vendor.
+      operationId: PostOrderCompletion
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: body
+          description: Order completion object
+          required: true
+          schema:
+            $ref: '#/definitions/OrderCompletion'
       responses:
         '200':
           description: OK
@@ -1677,6 +1751,98 @@ definitions:
     ]
     items: 
       $ref: '#/definitions/Inventory'
+  OrderFulfillment:
+    description: Order fulfillment object
+    type: object
+    properties:
+      slug:
+        description: The slug this fulfillment message pertains to
+        type: string
+        example: "cool_tshirt"
+      physicalDelivery:
+        description: An object containing the shipping and tracking number. Only use if this is a fulfillment for a physical good. You can use more than one object if the item has multiple tracking numbers.
+        type: array
+        items:
+          type: object
+          properties:
+            shipper:
+              description: The postal carrier for the shipment
+              type: string
+              example: "UPS"
+            trackingNumber:
+              description: The tracking number
+              type: string
+              example: "1Z204E380338943508"
+      digitalDelivery:
+        description: An object containing a url and password for a digital good. This field is not used for automated delivery. You can use more than one field if necessary.
+        type: array
+        items:
+          type: object
+          properties:
+            url:
+              description: The download url
+              type: string
+              example: "http://example.com/download.mp3"
+            password:
+              description: An optional password to access the file
+              type: string
+              example: "letmein"
+  OrderCompletion:
+    description: Order completion object
+    type: object
+    properties:
+      orderId:
+        description: The base58 encoded multihash order ID
+        type: string
+        example: "QmPDLS7TV9Q3gtxRXQVqrm2RpEtz1Mq6u2YGeuEJWCqu6B"
+      ratings:
+        description: An array of rating objects
+        type: array
+        items:
+          type: object
+          properties:
+            slug:
+              description: The slug this rating is for
+              type: string
+              example: "cool_tshirt"
+            overall:
+              description: The overall rating
+              type: integer
+              minimum: 1
+              maximum: 5
+              example: 3
+            quality:
+              description: The quality rating
+              type: integer
+              minimum: 1
+              maximum: 5
+              example: 4
+            description:
+              description: The description rating
+              type: integer
+              minimum: 1
+              maximum: 5
+              example: 5
+            deliverySpeed:
+              description: The delivery speed rating
+              type: integer
+              minimum: 1
+              maximum: 5
+              example: 5
+            customerService:
+              description: The customer service rating
+              type: integer
+              minimum: 1
+              maximum: 5
+              example: 3
+            review:
+              description: The buyer's text review
+              type: string
+              example: "This rocks!"
+            anonymous:
+              description: Don't include the buyer's ID in the rating
+              type: boolean
+              example: True
   Config:
     description: Config object
     type: object
